@@ -1,11 +1,11 @@
 #define RUBY_VERSION "1.6.8"
-#define RUBY_RELEASE_DATE "2003-01-11"
+#define RUBY_RELEASE_DATE "2003-01-12"
 #define RUBY_VERSION_CODE 168
-#define RUBY_RELEASE_CODE 20030111
+#define RUBY_RELEASE_CODE 20030112
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 6
 #define RUBY_VERSION_TEENY 8
 #define RUBY_RELEASE_YEAR 2003
 #define RUBY_RELEASE_MONTH 01
-#define RUBY_RELEASE_DAY 11
+#define RUBY_RELEASE_DAY 12
