@@ -1,3 +1,11 @@
+Sun Jan 12 16:07:17 2003  WATANABE Hirofumi  <eban@ruby-lang.org>
+
+	* io.c (next_argv): inherit binmode from $defout.
+
+	* configure.in: better DJGPP support. add GNUmakefile.
+
+	* djgpp/GNUmakefile: new.
+
 Sat Jan 11 21:27:14 2003  WATANABE Hirofumi  <eban@ruby-lang.org>
 
 	* configure.in (DLDLIBS): do not add "-lc" on DJGPP.
